--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -45,7 +45,19 @@ h4 {
 
 
 
+/*------------------------------------
+				SIDEBAR
+------------------------------------*/
 
+
+
+.hidden {
+	visibility: hidden;
+}
+
+.visible {
+	visibility: visible;
+}
 /*------------------------------------
 				SIDEBAR
 ------------------------------------*/
